Some progress on the implementation of analysis stage

--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -200,6 +200,7 @@ Techniques include:
 This paper attempts to detect use of metaphor and simile as well as reproduce it. The pragmatics around the use of metaphor and simile will be considered, for example using the ocean to show power rather than the sun if the poem generally speaks of water. We do not consider Hyperbole and Powerful Verb as they are similar to Metaphor, but it is worth noting that they exist because including them should be an accessible extension for future work.
 
 \subsubsection{Pragmatics and Personification}
+\label{sec:pragpers}
 Poetry is similar to storytelling in that it has characters around which the poem is written. Understanding who or what they are, their descriptions and their actions are all part of the underlying message that the poet wants to get across. This is the context of the poem and defining it is a pragmatics problem.
 
 Personification is a technique used by poets to give inanimate objects life, expressing actions and descriptions as if it were human. This is a powerful technique that relates to imagery, helping poets make more abstract messages clearer. For example, \textit{the moon smiled} gives the moon life by describing it as having performed a human-like action with full intention of doing so. Noting the use of personification can make the context of the poem clearer, as often inanimate objects are the subject of the poem.
